--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </div>
 
     <script>
-        const NUMBERS_URL = 'https://aryantidke.me/call/numbers.txt';
+        const NUMBERS_URL = 'https://aryantidke.me/call/numbers.txt?v=1';
         const STORAGE_KEY = 'dialerProgress';
         
         let numbers = [];
